fix: corrected typ in html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="profile-header">
           <img
             class="profile-image"
-            src="/assets/images/avatar-jessica.jpeg"
+            src="/assets/images/avatar-jessica.jpg"
             alt="Avatar of Jessica Randall"
           />
           <h1 class="profile-title">Jessica Randall</h1>
